--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           </div>
       </div> -->
       <!-- Featured Project Row -->
-      <div class="row align-items-center no-gutters mb-4 mb-lg-5 project" style="cursor: pointer;" onclick="window.open('https://iaco.me/post/001')">
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5 project">
         <div class="col-xl-8 col-lg-7">
           <img class="img-fluid mb-3 mb-lg-0 project-img" src="img/apple.jpg" alt="">
           <div class="middle">NUTRITION</div>
@@ -312,7 +312,7 @@
           </div>
       </div> -->
       <!-- Featured Project Row -->
-      <div class="row align-items-center no-gutters mb-4 mb-lg-5 project" style="cursor: pointer;" onclick="window.open('https://iaco.me/post/001')">
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5 project">
         <div class="col-xl-8 col-lg-7">
           <img class="img-fluid mb-3 mb-lg-0 project-img" src="img/meditation.jpg" alt="">
           <div class="middle">REST</div>
