--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   </section>
 
   <!-- Projects Section -->
-  <section id="exercise" class="projects-section bg-black">
+  <section class="projects-section bg-black">
     <div class="container">
 
       <!-- <div class="row align-items-center no-gutters mb-4">
@@ -161,12 +161,12 @@
           <img class="img-fluid mb-3 mb-lg-0 project-img" src="img/gym.jpg" alt="">
           <div class="middle">EXERCISE</div>
         </div>
-        <div class="col-xl-4 col-lg-5">
+        <div id="exercise" class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4 class="text-white"><i class="fas fa-running fa-lg"></i> EXERCISE <i class="fas fa-dumbbell fa-lg"></i></h4>
             <h5 class="text-white mb-2">To maintain a good performance our bodies need to move.</h5>
             <h5 class="text-white mb-2">It improves our physical health, including our cardiovascular flow, our muscle strength and volume, and prevents diseases.</h5>
-            <h5 class="text-white mb-2">And it also boost our happiness, libido and well-being, meanwhile decreases stress and anxiety.</h5>
+            <h5 class="text-white mb-2">And it also boosts our happiness, libido and well-being, while decreasing stress and anxiety.</h5>
           </div>
         </div>
       </div>
@@ -225,7 +225,7 @@
   </section>
 
   <!-- Projects Section -->
-  <section id="nutrition" class="projects-section bg-black">
+  <section class="projects-section bg-black">
     <div class="container">
 
       <!-- <div class="row align-items-center no-gutters mb-4">
@@ -239,7 +239,7 @@
           <img class="img-fluid mb-3 mb-lg-0 project-img" src="img/apple.jpg" alt="">
           <div class="middle">NUTRITION</div>
         </div>
-        <div class="col-xl-4 col-lg-5">
+        <div id="nutrition" class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4 class="text-white"><i class="fas fa-utensil-spoon fa-lg"></i> NUTRITION <i class="fas fa-apple-alt fa-lg"></i></h4>
             <h5 class="text-white mb-2">Our intestine is our "second brain", with more than 200 million neurons.</h5>
@@ -251,13 +251,13 @@
       <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
               <h6 class="text-center mb-3">
-                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Muscle Gain diet - soon</a>
+                  <a href="#nutrition" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Muscle Gain diet - soon</a>
               </h6>
               <h6 class="text-center mb-3">
-                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Weight Loss diet - soon</a>
+                  <a href="#nutrition" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Weight Loss diet - soon</a>
               </h6>
               <h6 class="text-center mb-3">
-                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Vegan (Plant-based) diet - soon</a>
+                  <a href="#nutrition" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Vegan (Plant-based) diet - soon</a>
               </h6>
           </div>
       </div>
@@ -303,7 +303,7 @@
   </section>
 
   <!-- Projects Section -->
-  <section id="rest" class="projects-section bg-black">
+  <section class="projects-section bg-black">
     <div class="container">
 
       <!-- <div class="row align-items-center no-gutters mb-4">
@@ -317,28 +317,25 @@
           <img class="img-fluid mb-3 mb-lg-0 project-img" src="img/meditation.jpg" alt="">
           <div class="middle">REST</div>
         </div>
-        <div class="col-xl-4 col-lg-5">
+        <div id="rest" class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4 class="text-white"><i class="fas fa-cloud-moon fa-lg"></i> REST <i class="fas fa-bed fa-lg"></i></h4>
             <h5 class="text-white mb-2">The benefits of relaxation are huge, they create synergy between body and mind, restructuring the individual.</h5>
             <h5 class="text-white mb-2">In a world where we are constantly subject to distractions, it is important to create time for us, to empty our minds, relief stress and find our well-being.</h5>
-            <h5 class="text-white mb-2">Relaxation can improve a multitude of areas: emotional, intellectual, corporeal, functional...</h5>
-            <h5 class="text-white mb-2"></h5>
-            <h5 class="text-white mb-2"></h5>
-            <h5 class="text-white mb-0"></h5>
+            <h5 class="text-white mb-0">Relaxation can improve a multitude of areas: emotional, intellectual, corporeal, functional...</h5>
           </div>
         </div>
       </div>
       <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
               <h6 class="text-center mb-3">
-                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Sleep technique - soon</a>
+                  <a href="#rest" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Sleep technique - soon</a>
               </h6>
               <h6 class="text-center mb-3">
-                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Meditation technique - soon</a>
+                  <a href="#rest" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Meditation technique - soon</a>
               </h6>
               <h6 class="text-center mb-3">
-                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Breathing technique - soon</a>
+                  <a href="#rest" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Breathing technique - soon</a>
               </h6>
           </div>
       </div>
