--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>be100you - Become 100% of your potential!</title>
+    <title>be100you - Explore 100% of your potential!</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png">
@@ -86,8 +86,8 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="my-0 mt-5">be 100 you</h1>
-        <h2 class="text-white mx-auto mt-5 mb-2">Become 100% of your potential!</h2>
-        <h2 class="text-white mx-auto mt-2 mb-2">Take good care of your mind & body</h2>
+        <h2 class="text-white mx-auto mt-5 mb-2">Explore 100% of your potential!</h2>
+        <h2 class="text-white mx-auto mt-2 mb-2">Take good care of your body & mind</h2>
         <h2 class="text-white mx-auto mt-2 mb-5">Improve your exercise, nutrition & rest</h2>
         <a href="#triangle" class="btn btn-primary js-scroll-trigger"><i class="fas fa-caret-right"></i> Your Health Triangle <i class="fas fa-caret-left"></i></a>
       </div>
