--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <script data-ad-client="ca-pub-8872772271246523" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 </head>
 
-<body id="page-top">
+<body class="en" id="page-top">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
