--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="my-0 mt-5">be 100 you</h1>
-        <h2 class="text-white mx-auto mt-5 mb-2">Explore 100% of your potential!</h2>
-        <h2 class="text-white mx-auto mt-2 mb-2">Take good care of your body & mind</h2>
-        <h2 class="text-white mx-auto mt-2 mb-5">Improve your exercise, nutrition & rest</h2>
-        <a href="#triangle" class="btn btn-primary js-scroll-trigger"><i class="fas fa-caret-right"></i> Your Health Triangle <i class="fas fa-caret-left"></i></a>
+        <h2 class="text-white mx-auto mt-5 mb-2" lang="en">Explore 100% of your potential!</h2>
+        <h2 class="text-white mx-auto mt-2 mb-2" lang="en">Take good care of your body & mind</h2>
+        <h2 class="text-white mx-auto mt-2 mb-5" lang="en">Improve your exercise, nutrition & rest</h2>
+        <a href="#triangle" class="btn btn-primary js-scroll-trigger" lang="en"><i class="fas fa-caret-right"></i> Your Health Triangle <i class="fas fa-caret-left"></i></a>
       </div>
     </div>
   </header>
