--- a/index.html
+++ b/index.html
@@ -86,11 +86,14 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="my-0 mt-5">be 100 you</h1>
+        <button onclick="document.body.className='en'">english</button>
+        <span lang="fr"><a href="#page-top" class="btn btn-primary js-scroll-trigger" onclick="document.body.className='en'">English</a></span>
+        <span lang="en"><a href="#page-top" class="btn btn-primary js-scroll-trigger" onclick="document.body.className='fr'">français</a></span>
         <h2 class="text-white mx-auto mt-5 mb-2">
           <span lang="en">Explore 100% of your potential!</span>
           <span lang="fr">Explorez 100% de votre potentiel!</span>
         </h2>
-        <h2 class="text-white mx-auto mt-2 mb-2">*
+        <h2 class="text-white mx-auto mt-2 mb-2">
           <span lang="en">Take good care of your body & mind</span>
           <span lang="fr">Prenez bien soin de votre corps & esprit</span>
         </h2>
