--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="col-lg-8 mx-auto">
                 <h1 class="text-white mb-4">The Health Triangle</h1>
                 <i>
-                  <h5 class="text-white mx-auto">Our physical health has 3 main components:</h5>
+                  <h5 class="text-white mx-auto">Our personal health has 3 main components:</h5>
                   <h5 class="text-white mx-auto">Exercise - gym, outside & inside sports...</h5>
                   <h5 class="text-white mx-auto">Nutrition - macro & micronutrients, energy...</h5>
                   <h5 class="text-white mx-auto">Rest - sleep, peace of mind, stress/anxiety control...</h5>
@@ -192,7 +192,7 @@
       <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
               <h6 class="text-center mb-3">
-                  <a href="#contact" class="js-scroll-trigger"><i class="fas fa-comments fa-lg"></i> Personalized program - contact us</a>
+                  <a href="#exercise" class="js-scroll-trigger"><i class="fas fa-comments fa-lg"></i> Personalized program - contact us</a>
               </h6>
               <h6 class="text-center mb-3">
                   <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Quarantine (Bodyweight) program - soon</a>
