--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
 
@@ -74,7 +74,7 @@
             <a class="nav-link js-scroll-trigger" href="#rest"><i class="fas fa-cloud-moon fa-2x"></i> <i class="fas fa-bed fa-2x"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact"><i class="far fa-user fa-2x"></i> <i class="fas fa-user fa-2x"></i></a>
+            <a class="nav-link js-scroll-trigger" href="#contact"><i class="fab fa-instagram fa-2x"></i> <i class="far fa-comment fa-2x"></i></a>
           </li>
         </ul>
       </div>
@@ -85,7 +85,13 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="my-0 mt-5">be 100 you</h1>
+        <h1 class="my-0 mt-5 mb-3">be 100 you</h1>
+
+        <span style="cursor: pointer; line-height: 8px; padding: 12px;" class="btn btn-primary js-scroll-trigger" onclick="document.body.className='en'">EN</span>
+        <span style="cursor: pointer; line-height: 8px; padding: 12px;" class="btn btn-primary js-scroll-trigger" onclick="document.body.className='fr'">FR</span>
+        <!-- <span style="cursor: pointer; line-height: 8px; padding: 12px;" class="btn btn-primary js-scroll-trigger" onclick="document.body.className='it'">IT</span>
+        <span style="cursor: pointer; line-height: 8px; padding: 12px;" class="btn btn-primary js-scroll-trigger" onclick="document.body.className='pt'">PT</span> -->
+
         <h2 class="text-white mx-auto mt-5 mb-2">
           <span lang="en">Explore 100% of your potential!</span>
           <span lang="fr">Explorez 100% de votre potentiel!</span>
@@ -104,11 +110,6 @@
           <span lang="fr"> Votre Triangle de la Santé </span>
           <i class="fas fa-caret-left"></i>
         </a>
-        <!--
-        <br/>
-        <span lang="fr"><a href="#page-top" class="btn btn-primary js-scroll-trigger" onclick="document.body.className='en'">English</a></span>
-        <span lang="en"><a href="#page-top" class="btn btn-primary js-scroll-trigger" onclick="document.body.className='fr'">français</a></span>
-        -->
       </div>
     </div>
   </header>
@@ -129,7 +130,7 @@
                 <center>
                 <table>
                     <tr>
-                        <td style="text-align: center; vertical-align: bottom; font-size: 12pt;" colspan="3">
+                        <td style="text-align: center; vertical-align: bottom; font-size: 12pt; text-shadow: 0px 0px 8px black;" colspan="3">
                             <a class="js-scroll-trigger" href="#exercise"><i class="fas fa-running fa-2x"></i> <i class="fas fa-dumbbell fa-2x"></i>
                             <br/>
                             Exercise
@@ -137,7 +138,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="text-align: center; vertical-align: bottom; font-size: 12pt;">
+                        <td style="text-align: center; vertical-align: bottom; font-size: 12pt; text-shadow: 0px 0px 8px black;">
                             <a class="js-scroll-trigger" href="#nutrition"><i class="fas fa-utensil-spoon fa-2x"></i> <i class="fas fa-apple-alt fa-2x"></i>
                             <br/>
                             Nutrition
@@ -148,7 +149,7 @@
                                 <img src="img/triangle.png" style="width: 15vw;" />
                             </object>
                         </td>
-                        <td style="text-align: center; vertical-align: bottom; font-size: 12pt;">
+                        <td style="text-align: center; vertical-align: bottom; font-size: 12pt; text-shadow: 0px 0px 8px black;">
                             <a class="js-scroll-trigger" href="#rest"><i class="fas fa-cloud-moon fa-2x"></i> <i class="fas fa-bed fa-2x"></i>
                             <br/>
                             Rest
