--- a/index.html
+++ b/index.html
@@ -98,16 +98,16 @@
         </h2>
         <h2 class="text-white mx-auto mt-2 mb-2">
           <span lang="en">Take good care of your body & mind</span>
-          <span lang="fr">Prenez bien soin de votre corps & esprit</span>
+          <span lang="fr">Prenez bien soin de votre corps et esprit</span>
         </h2>
         <h2 class="text-white mx-auto mt-2 mb-5">
           <span lang="en">Improve your exercise, nutrition & rest</span>
-          <span lang="fr">Améliorew vos exercices, nutrition & repos</span>
+          <span lang="fr">Améliorez votre activité physique, nutrition & repos</span>
         </h2>
         <a href="#triangle" class="btn btn-primary js-scroll-trigger">
           <i class="fas fa-caret-right"></i>
           <span lang="en"> Your Health Triangle </span>
-          <span lang="fr"> Votre Triangle de la Santé </span>
+          <span lang="fr"> Votre Triangle de Santé </span>
           <i class="fas fa-caret-left"></i>
         </a>
       </div>
@@ -119,12 +119,27 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto">
-                <h1 class="text-white mb-4">The Health Triangle</h1>
+                <h1 class="text-white mb-4">
+                    <span lang="en">The Health Triangle</span>
+                    <span lang="fr">Le Triangle de Santé</span>
+                </h1>
                 <i>
-                  <h5 class="text-white mx-auto">Our personal health has 3 main components:</h5>
-                  <h5 class="text-white mx-auto">Exercise - gym, outside & inside sports...</h5>
-                  <h5 class="text-white mx-auto">Nutrition - macro & micronutrients, energy...</h5>
-                  <h5 class="text-white mx-auto">Rest - sleep, peace of mind, stress/anxiety control...</h5>
+                  <h5 class="text-white mx-auto">
+                      <span lang="en">Our personal health has 3 main components:</span>
+                      <span lang="fr">Notre santé physique a 3 composants principaux :</span>
+                  </h5>
+                  <h5 class="text-white mx-auto">
+                      <span lang="en">Exercise - gym, outside & inside sports...</span>
+                      <span lang="fr">Exercice - Salle de sport, Pratiques individuelles et collectives...</span>
+                  </h5>
+                  <h5 class="text-white mx-auto">
+                      <span lang="en">Nutrition - macro & micronutrients, energy...</span>
+                      <span lang="fr">Nutrition - Macro & micronutriments, la qualité des aliments...</span>
+                  </h5>
+                  <h5 class="text-white mx-auto">
+                      <span lang="en">Rest - sleep, peace of mind, stress/anxiety control...</span>
+                      <span lang="fr">Repos - Le sommeil, la tranquillité de l'esprit, le contrôle du stress...</span>
+                  </h5>
                 </i>
                 <br/>
                 <center>
@@ -133,7 +148,8 @@
                         <td style="text-align: center; vertical-align: bottom; font-size: 12pt; text-shadow: 0px 0px 8px black;" colspan="3">
                             <a class="js-scroll-trigger" href="#exercise"><i class="fas fa-running fa-2x"></i> <i class="fas fa-dumbbell fa-2x"></i>
                             <br/>
-                            Exercise
+                            <span lang="en">Exercise</span>
+                            <span lang="fr">Exercice</span>
                             </a>
                         </td>
                     </tr>
@@ -141,7 +157,8 @@
                         <td style="text-align: center; vertical-align: bottom; font-size: 12pt; text-shadow: 0px 0px 8px black;">
                             <a class="js-scroll-trigger" href="#nutrition"><i class="fas fa-utensil-spoon fa-2x"></i> <i class="fas fa-apple-alt fa-2x"></i>
                             <br/>
-                            Nutrition
+                            <span lang="en">Nutrition</span>
+                            <span lang="fr">Nutrition</span>
                             </a>
                         </td>
                         <td style="text-align: center; padding: 10px;">
@@ -152,7 +169,8 @@
                         <td style="text-align: center; vertical-align: bottom; font-size: 12pt; text-shadow: 0px 0px 8px black;">
                             <a class="js-scroll-trigger" href="#rest"><i class="fas fa-cloud-moon fa-2x"></i> <i class="fas fa-bed fa-2x"></i>
                             <br/>
-                            Rest
+                            <span lang="en">Rest</span>
+                            <span lang="fr">Repos</span>
                             </a>
                         </td>
                     </tr>
@@ -179,27 +197,53 @@
       <div class="row align-items-center no-gutters mb-4 mb-lg-5 project">
         <div class="col-xl-8 col-lg-7">
           <img class="img-fluid mb-3 mb-lg-0 project-img" src="img/gym.jpg" alt="">
-          <div class="middle">EXERCISE</div>
+          <div class="middle">
+              <span lang="en"> EXERCISE </span>
+              <span lang="fr"> EXERCICE </span>
+          </div>
         </div>
         <div id="exercise" class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4 class="text-white"><i class="fas fa-running fa-lg"></i> EXERCISE <i class="fas fa-dumbbell fa-lg"></i></h4>
-            <h5 class="text-white mb-2">To maintain a good performance our bodies need to move.</h5>
-            <h5 class="text-white mb-2">It improves our physical health, including our cardiovascular flow, our muscle strength and volume, and prevents diseases.</h5>
-            <h5 class="text-white mb-2">And it also boosts our happiness, libido and well-being, while decreasing stress and anxiety.</h5>
+            <h4 class="text-white">
+                <i class="fas fa-running fa-lg"></i>
+                <span lang="en"> EXERCISE </span>
+                <span lang="fr"> EXERCICE </span>
+                <i class="fas fa-dumbbell fa-lg"></i>
+             </h4>
+            <h5 class="text-white mb-2">
+                <span lang="en">To maintain a good performance our bodies need to move.</span>
+                <span lang="fr">Pour maintenir une bonne performance physique, notre corps à besoin de bouger.</span>
+            </h5>
+            <h5 class="text-white mb-2">
+                <span lang="en">It improves our physical health, including our cardiovascular flow, our muscle strength and volume, and prevents diseases.</span>
+                <span lang="fr">Ce mouvement nous permet d'améliorer notre système cardio-vasculaire, notre force et volume musculaire, ainsi que de prévenir de l'apparition potentielle de diverses maladies et cancers.</span>
+            </h5>
+            <h5 class="text-white mb-2">
+                <span lang="en">And it also boosts our happiness, libido and well-being, while decreasing stress and anxiety.</span>
+                <span lang="fr">Il permet également d'augmenter sa sensation de bonheur, ainsi que sa libido, son bien être général... Il aura également un rôle très important dans la diminution du stress et de l'anxiété.</span>
+            </h5>
           </div>
         </div>
       </div>
       <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
               <h6 class="text-center mb-3">
-                  <a href="#exercise" class="js-scroll-trigger"><i class="fas fa-comments fa-lg"></i> Personalized program - contact us</a>
+                  <a href="#exercise" class="js-scroll-trigger"><i class="fas fa-comments fa-lg"></i>
+                      <span lang="en"> Personalized program - contact us</span>
+                      <span lang="fr"> Programme personnalisé - nous contacter</span>
+                  </a>
               </h6>
               <h6 class="text-center mb-3">
-                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Quarantine (Bodyweight) program - soon</a>
+                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i>
+                      <span lang="en"> Quarantine (Bodyweight) program - soon</span>
+                      <span lang="fr"> Programme spécial quarantaine (poids du corps) - bientôt</span>
+                  </a>
               </h6>
               <h6 class="text-center mb-3">
-                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Push-Pull-Leg program - soon</a>
+                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i>
+                      <span lang="en"> Push-Pull-Leg program - soon</span>
+                      <span lang="fr"> Programme Push-Pull-Leg - bientôt</span>
+                   </a>
               </h6>
           </div>
       </div>
@@ -257,27 +301,56 @@
       <div class="row align-items-center no-gutters mb-4 mb-lg-5 project">
         <div class="col-xl-8 col-lg-7">
           <img class="img-fluid mb-3 mb-lg-0 project-img" src="img/apple.jpg" alt="">
-          <div class="middle">NUTRITION</div>
+          <div class="middle">
+              <span lang="en">NUTRITION</span>
+              <span lang="fr">NUTRITION</span>
+          </div>
         </div>
         <div id="nutrition" class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4 class="text-white"><i class="fas fa-utensil-spoon fa-lg"></i> NUTRITION <i class="fas fa-apple-alt fa-lg"></i></h4>
-            <h5 class="text-white mb-2">Our intestine is our "second brain", with more than 200 million neurons.</h5>
-            <h5 class="text-white mb-2">It has been shown that what we eat directly impacts our emotions, moods, thoughts...</h5>
-            <h5 class="text-white mb-0">That is why a balanced and proper diet is important, which should be individualized to take into account personal goals, such as weight loss, muscle gain, a healthier lifestyle...</h5>
+            <h4 class="text-white">
+                <i class="fas fa-utensil-spoon fa-lg"></i>
+                <span lang="en"> NUTRITION </span>
+                <span lang="fr"> NUTRITION </span>
+                <i class="fas fa-apple-alt fa-lg"></i>
+            </h4>
+            <h5 class="text-white mb-2">
+                <span lang="en">Our intestine is our "second brain", with more than 200 million neurons.</span>
+                <span lang="fr">L'intestin est en réalité notre deuxième cerveau, car il comprend à lui seul 200 millions de neurones.</span>
+            </h5>
+            <h5 class="text-white mb-2">
+                <span lang="en">It has been shown that what we eat directly impacts our emotions, moods, thoughts...</span>
+                <span lang="fr">Il a été prouvé que ce que nous mangeons a un impact direct sur nos émotions, nos humeurs, nos pensées...</span>
+            </h5>
+            <h5 class="text-white mb-0">
+                <span lang="en">That is why a balanced and proper diet is important, which should be individualized to take into account personal goals, such as weight loss, muscle gain, a healthier lifestyle...</span>
+                <span lang="fr">C'est pourquoi il est aussi important d'avoir une alimentation correcte et équilibrée, individualisé à chacun, à ses objectifs à court et long terme, que ce soit pour une prise de masse musculaire, une perte de masse grasse, une vie plus saine...</span>
+            </h5>
           </div>
         </div>
       </div>
       <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
               <h6 class="text-center mb-3">
-                  <a href="#nutrition" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Muscle Gain diet - soon</a>
+                  <a href="#nutrition" class="text-white-50 js-scroll-trigger">
+                      <i class="fas fa-hourglass-half fa-lg"></i>
+                      <span lang="en"> Muscle Gain diet - soon</span>
+                      <span lang="fr"> Diète pour la prise de masse - bientôt</span>
+                  </a>
               </h6>
               <h6 class="text-center mb-3">
-                  <a href="#nutrition" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Weight Loss diet - soon</a>
+                  <a href="#nutrition" class="text-white-50 js-scroll-trigger">
+                      <i class="fas fa-hourglass-half fa-lg"></i>
+                      <span lang="en"> Weight Loss diet - soon</span>
+                      <span lang="fr"> Diète pour la perte de poids - bientôt</span>
+                   </a>
               </h6>
               <h6 class="text-center mb-3">
-                  <a href="#nutrition" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Vegan (Plant-based) diet - soon</a>
+                  <a href="#nutrition" class="text-white-50 js-scroll-trigger">
+                      <i class="fas fa-hourglass-half fa-lg"></i>
+                      <span lang="en"> Vegan (Plant-based) diet - soon</span>
+                      <span lang="fr"> Diète vegane - bientôt</span>
+                  </a>
               </h6>
           </div>
       </div>
@@ -335,27 +408,56 @@
       <div class="row align-items-center no-gutters mb-4 mb-lg-5 project">
         <div class="col-xl-8 col-lg-7">
           <img class="img-fluid mb-3 mb-lg-0 project-img" src="img/meditation.jpg" alt="">
-          <div class="middle">REST</div>
+          <div class="middle">
+              <span lang="en">REST</span>
+              <span lang="fr">REPOS</span>
+          </div>
         </div>
         <div id="rest" class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4 class="text-white"><i class="fas fa-cloud-moon fa-lg"></i> REST <i class="fas fa-bed fa-lg"></i></h4>
-            <h5 class="text-white mb-2">The benefits of relaxation are huge, they create synergy between body and mind, restructuring the individual.</h5>
-            <h5 class="text-white mb-2">In a world where we are constantly subject to distractions, it is important to create time for us, to empty our minds, relief stress and find our well-being.</h5>
-            <h5 class="text-white mb-0">Relaxation can improve a multitude of areas: emotional, intellectual, corporeal, functional...</h5>
+            <h4 class="text-white">
+                <i class="fas fa-cloud-moon fa-lg"></i>
+                <span lang="en"> REST </span>
+                <span lang="fr"> REPOS </span>
+                <i class="fas fa-bed fa-lg"></i>
+            </h4>
+            <h5 class="text-white mb-2">
+                <span lang="en">The benefits of relaxation are huge, they create synergy between body and mind, restructuring the individual.</span>
+                <span lang="fr">Les bienfaits de la relaxation dépassent l'imagination, ils permettent de créer l'harmonie entre le corps et l'esprit, et d'ainsi favoriser la restructuration de l'individu.</span>
+            </h5>
+            <h5 class="text-white mb-2">
+                <span lang="en">In a world where we are constantly subject to distractions, it is important to create time for us, to empty our minds, relief stress and find our well-being.</span>
+                <span lang="fr">Dans un monde où nous sommes constamment soumis à nos pensées, il est très important de trouver du temps pour soi, pour se vider l'esprit, se libérer du stress et retrouver une sensation globale de bien être.</span>
+            </h5>
+            <h5 class="text-white mb-0">
+                <span lang="en">Relaxation can improve a multitude of areas: emotional, intellectual, corporeal, functional...</span>
+                <span lang="fr">Les bienfaits de la relaxations se situent dans une multitude de domaines différents, que ce soit émotionnel, intellectuel, corporel ou même fonctionnel...</span>
+            </h5>
           </div>
         </div>
       </div>
       <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
               <h6 class="text-center mb-3">
-                  <a href="#rest" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Sleep technique - soon</a>
+                  <a href="#rest" class="text-white-50 js-scroll-trigger">
+                      <i class="fas fa-hourglass-half fa-lg"></i>
+                      <span lang="en"> Sleep - soon</span>
+                      <span lang="fr"> Sommeil - bientôt</span>
+                  </a>
               </h6>
               <h6 class="text-center mb-3">
-                  <a href="#rest" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Meditation technique - soon</a>
+                  <a href="#rest" class="text-white-50 js-scroll-trigger">
+                      <i class="fas fa-hourglass-half fa-lg"></i>
+                      <span lang="en"> Meditation - soon</span>
+                      <span lang="fr"> Meditation - bientôt</span>
+                   </a>
               </h6>
               <h6 class="text-center mb-3">
-                  <a href="#rest" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Breathing technique - soon</a>
+                  <a href="#rest" class="text-white-50 js-scroll-trigger">
+                      <i class="fas fa-hourglass-half fa-lg"></i>
+                      <span lang="en"> Breathing technique - soon</span>
+                      <span lang="fr"> La respiration - bientôt</span>
+                  </a>
               </h6>
           </div>
       </div>
@@ -475,13 +577,18 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mx-auto justify-content-center social">
-            Thanks for visiting, see you again soon.
+            <span lang="en">Thanks for visiting, see you again soon.</span>
+            <span lang="fr">Merci de votre visite, à très bientôt.</span>
             <br/><br/>
             be100you
             <br/><br/>
-            <a href="mailto:hi@iaco.me"><i class="far fa-envelope"></i></a> send us a letter
+            <a href="mailto:hi@iaco.me"><i class="far fa-envelope"></i></a>
+            <span lang="en"> send us a letter</span>
+            <span lang="fr"> envoyez-nous une lettre</span>
             <br/><br/>
-            <a href="https://iaco.me/terms"><i class="far fa-copyright"></i></a> rights and terms
+            <a href="https://iaco.me/terms"><i class="far fa-copyright"></i></a>
+            <span lang="en"> rights and terms</span>
+            <span lang="fr"> droits et conditions</span>
         </div>
       </div>
     </div>
