--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
         </div>
 
         <div class="col-md-6 mb-9 mb-md-0">
-          <a target="_blank" href="https://iaco.me/favs">
+          <a target="_blank" href="https://iaco.me/hi">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <i class="fas fa-user fa-2x text-white mb-2"></i>
