--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/icon/favicon-16x16.png">
     <link rel="manifest" href="/icon/site.webmanifest">
-    <link rel="mask-icon" href="/icon/safari-pinned-tab.svg" color="#141414">
+    <link rel="mask-icon" href="/icon/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="/icon/favicon.ico">
-    <meta name="msapplication-TileColor" content="#141414">
+    <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="/icon/browserconfig.xml">
     <meta name="theme-color" content="#141414">
 
