--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
               <h6 class="text-center mb-3">
-                  <a href="https://forms.gle/S6hJWARwbTm7eoQQ7" target="_blank" class="js-scroll-trigger"><i class="fas fa-comments fa-lg"></i>
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeo3_N7PP2FWLl225uDJYVQbAUtoVXqoEpw5Y3YupTwKZO50g/viewform?usp=sf_link" target="_blank" class="js-scroll-trigger"><i class="fas fa-comments fa-lg"></i>
                       <span lang="en"> Personalized program - contact us</span>
                       <span lang="fr"> Programme personnalisé - nous contacter</span>
                   </a>
@@ -332,6 +332,10 @@
       <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
               <h6 class="text-center mb-3">
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeo3_N7PP2FWLl225uDJYVQbAUtoVXqoEpw5Y3YupTwKZO50g/viewform?usp=sf_link" target="_blank" class="js-scroll-trigger"><i class="fas fa-comments fa-lg"></i>
+                      <span lang="en"> Personalized diet - contact us</span>
+                      <span lang="fr"> Plan alimentaire personnalisé - nous contacter</span>
+                  </a>
                   <a href="#nutrition" class="text-white-50 js-scroll-trigger">
                       <i class="fas fa-hourglass-half fa-lg"></i>
                       <span lang="en"> Muscle Gain diet - soon</span>
