--- a/index.html
+++ b/index.html
@@ -336,6 +336,8 @@
                       <span lang="en"> Personalized diet - contact us</span>
                       <span lang="fr"> Plan alimentaire personnalisé - nous contacter</span>
                   </a>
+              </h6>
+              <h6 class="text-center mb-3">
                   <a href="#nutrition" class="text-white-50 js-scroll-trigger">
                       <i class="fas fa-hourglass-half fa-lg"></i>
                       <span lang="en"> Muscle Gain diet - soon</span>
