--- a/index.html
+++ b/index.html
@@ -32,16 +32,15 @@
     <!-- Custom styles for this template -->
     <link href="config/grayscale.css" rel="stylesheet">
 
-    <!-- Global site tag (gtag.js) -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158716451-1"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163133600-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-158716451-1');
+      gtag('config', 'UA-163133600-1');
     </script>
-    <script data-ad-client="ca-pub-8872772271246523" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 </head>
 
 <body class="en" id="page-top">
