--- a/index.html
+++ b/index.html
@@ -215,11 +215,11 @@
             </h5>
             <h5 class="text-white mb-2">
                 <span lang="en">It improves our physical health, including our cardiovascular flow, our muscle strength and volume, and prevents diseases.</span>
-                <span lang="fr">Ce mouvement nous permet d'améliorer notre système cardio-vasculaire, notre force et volume musculaire, ainsi que de prévenir de l'apparition potentielle de diverses maladies et cancers.</span>
+                <span lang="fr">Ce mouvement nous permet d'améliorer notre système cardio-vasculaire, notre force et volume musculaire, ainsi que de prévenir de l'apparition de diverses maladies et cancers.</span>
             </h5>
             <h5 class="text-white mb-2">
                 <span lang="en">And it also boosts our happiness, libido and well-being, while decreasing stress and anxiety.</span>
-                <span lang="fr">Il permet également d'augmenter sa sensation de bonheur, ainsi que sa libido, son bien être général... Il aura également un rôle très important dans la diminution du stress et de l'anxiété.</span>
+                <span lang="fr">Il permet d'augmenter sa sensation de bonheur, sa libido, son bien être général... Il aura un rôle très important dans la diminution du stress et de l'anxiété.</span>
             </h5>
           </div>
         </div>
@@ -323,7 +323,7 @@
             </h5>
             <h5 class="text-white mb-0">
                 <span lang="en">That is why a balanced and proper diet is important, which should be individualized to take into account personal goals, such as weight loss, muscle gain, a healthier lifestyle...</span>
-                <span lang="fr">C'est pourquoi il est aussi important d'avoir une alimentation correcte et équilibrée, individualisé à chacun, à ses objectifs à court et long terme, que ce soit pour une prise de masse musculaire, une perte de masse grasse, une vie plus saine...</span>
+                <span lang="fr">C'est pourquoi il est aussi important d'avoir une alimentation correcte et équilibrée, individualisé à chacun, que ce soit pour une prise de masse musculaire, une perte de masse grasse, une vie plus saine...</span>
             </h5>
           </div>
         </div>
@@ -334,6 +334,7 @@
                   <a href="https://docs.google.com/forms/d/e/1FAIpQLSeo3_N7PP2FWLl225uDJYVQbAUtoVXqoEpw5Y3YupTwKZO50g/viewform?usp=sf_link" target="_blank" class="js-scroll-trigger"><i class="fas fa-comments fa-lg"></i>
                       <span lang="en"> Personalized diet - contact us</span>
                       <span lang="fr"> Plan alimentaire personnalisé - nous contacter</span>
+                      <span class="diagonalline">59€</span>
                   </a>
               </h6>
               <h6 class="text-center mb-3">
@@ -428,15 +429,15 @@
             </h4>
             <h5 class="text-white mb-2">
                 <span lang="en">The benefits of relaxation are huge, they create synergy between body and mind, restructuring the individual.</span>
-                <span lang="fr">Les bienfaits de la relaxation dépassent l'imagination, ils permettent de créer l'harmonie entre le corps et l'esprit, et d'ainsi favoriser la restructuration de l'individu.</span>
+                <span lang="fr">Les bienfaits de la relaxation dépassent l'imagination, ils permettent de créer l'harmonie entre le corps et l'esprit, et favorisent ainsi la restructuration de l'individu.</span>
             </h5>
             <h5 class="text-white mb-2">
                 <span lang="en">In a world where we are constantly subject to distractions, it is important to create time for us, to empty our minds, relief stress and find our well-being.</span>
-                <span lang="fr">Dans un monde où nous sommes constamment soumis à nos pensées, il est très important de trouver du temps pour soi, pour se vider l'esprit, se libérer du stress et retrouver une sensation globale de bien être.</span>
+                <span lang="fr">Dans un monde où nous sommes constamment soumis à nos pensées, il est important de trouver du temps pour soi, pour se vider l'esprit et retrouver une sensation globale de bien être.</span>
             </h5>
             <h5 class="text-white mb-0">
                 <span lang="en">Relaxation can improve a multitude of areas: emotional, intellectual, corporeal, functional...</span>
-                <span lang="fr">Les bienfaits de la relaxations se situent dans une multitude de domaines différents, que ce soit émotionnel, intellectuel, corporel ou même fonctionnel...</span>
+                <span lang="fr">Les bienfaits de la relaxation se retrouvent dans différents domaines : émotionnel, intellectuel, corporel ou même fonctionnel...</span>
             </h5>
           </div>
         </div>
