--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                   <a href="https://docs.google.com/forms/d/e/1FAIpQLSeo3_N7PP2FWLl225uDJYVQbAUtoVXqoEpw5Y3YupTwKZO50g/viewform?usp=sf_link" target="_blank" class="js-scroll-trigger"><i class="fas fa-comments fa-lg"></i>
                       <span lang="en"> Personalized program - contact us</span>
                       <span lang="fr"> Programme personnalisé - nous contacter</span>
+                      <span class="obliqueline">&nbsp;60€&nbsp;</span>&nbsp;39€
                   </a>
               </h6>
               <h6 class="text-center mb-3">
@@ -334,7 +335,7 @@
                   <a href="https://docs.google.com/forms/d/e/1FAIpQLSeo3_N7PP2FWLl225uDJYVQbAUtoVXqoEpw5Y3YupTwKZO50g/viewform?usp=sf_link" target="_blank" class="js-scroll-trigger"><i class="fas fa-comments fa-lg"></i>
                       <span lang="en"> Personalized diet - contact us</span>
                       <span lang="fr"> Plan alimentaire personnalisé - nous contacter</span>
-                      <span class="diagonalline">59€</span>
+                      <span class="obliqueline">&nbsp;60€&nbsp;</span>&nbsp;39€
                   </a>
               </h6>
               <h6 class="text-center mb-3">
