--- a/index.html
+++ b/index.html
@@ -52,15 +52,8 @@
           <object data="img/summit.svg" style="height: 4em; width: 4em; vertical-align: middle;" type="image/svg+xml">
               <img src="img/summit.png" style="height: 4em; width: 4em; vertical-align: middle;" />
           </object>
-          <!-- <i style="font-size: 30px;" class="fas fa-mountain text-primary-50 mb-2"></i> -->
           <b>be100you</b>
       </a>
-      <!--
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
-        <i class="fas fa-bars"></i>
-      </button>
-      -->
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -125,19 +118,19 @@
                 <i>
                   <h5 class="text-white mx-auto">
                       <span lang="en">Our personal health has 3 main components:</span>
-                      <span lang="fr">Notre santé physique a 3 composants principaux :</span>
+                      <span lang="fr">Notre santé personnelle a 3 composants principaux :</span>
                   </h5>
                   <h5 class="text-white mx-auto">
                       <span lang="en">Exercise - gym, outside & inside sports...</span>
-                      <span lang="fr">Exercice - Salle de sport, Pratiques individuelles et collectives...</span>
+                      <span lang="fr">Exercice - salle de sport, pratiques individuelles & collectives...</span>
                   </h5>
                   <h5 class="text-white mx-auto">
                       <span lang="en">Nutrition - macro & micronutrients, energy...</span>
-                      <span lang="fr">Nutrition - Macro & micronutriments, la qualité des aliments...</span>
+                      <span lang="fr">Nutrition - macro & micronutriments, la qualité des aliments...</span>
                   </h5>
                   <h5 class="text-white mx-auto">
                       <span lang="en">Rest - sleep, peace of mind, stress/anxiety control...</span>
-                      <span lang="fr">Repos - Le sommeil, la tranquillité de l'esprit, le contrôle du stress...</span>
+                      <span lang="fr">Repos - le sommeil, la tranquillité de l'esprit, le contrôle du stress...</span>
                   </h5>
                 </i>
                 <br/>
@@ -179,7 +172,6 @@
                 <br/>
             </div>
         </div>
-      <!-- <img src="img/earth.png" class="img-fluid mt-5" alt=""> -->
     </div>
   </section>
 
@@ -187,11 +179,6 @@
   <section class="projects-section bg-black">
     <div class="container">
 
-      <!-- <div class="row align-items-center no-gutters mb-4">
-          <div class="col-xl-12 col-lg-12">
-              <h6 class="text-white-50 text-center"><i class="fas fa-running fa-lg"></i> EXERCISE <i class="fas fa-dumbbell fa-lg"></i></h6>
-          </div>
-      </div> -->
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5 project">
         <div class="col-xl-8 col-lg-7">
@@ -248,43 +235,6 @@
           </div>
       </div>
 
-      <!-- Project One Row -->
-      <!-- <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/connection.jpg" alt="">
-        </div>
-        <div class="col-lg-6">
-          <div class="text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">One</h4>
-                  <h5 class="mb-0 text-white">Homines enim eruditos et sobrios ut infaustos et inutiles vitant, eo quoque accedente quod et nomenclatores adsueti haec et talia venditare, mercede accepta lucris quosdam et prandiis inserunt subditicios ignobiles et obscuros.Homines enim eruditos et sobrios ut infaustos et inutiles vitant, eo quoque accedente quod.
-                  </h5>
-                <hr class="d-none d-lg-block mb-0 ml-0">
-              </div>
-            </div>
-          </div>
-        </div>
-    </div> -->
-
-      <!-- Project Two Row -->
-      <!-- <div class="row justify-content-center no-gutters">
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/inspire.jpg" alt="">
-        </div>
-        <div class="col-lg-6 order-lg-first">
-          <div class="text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Two</h4>
-                  <h5 class="mb-0 text-white">Homines enim eruditos et sobrios ut infaustos et inutiles vitant, eo quoque accedente quod et nomenclatores adsueti haec et talia venditare, mercede accepta lucris quosdam et prandiis inserunt subditicios ignobiles.</h5>
-                <hr class="d-none d-lg-block mb-0 mr-0">
-              </div>
-            </div>
-          </div>
-        </div>
-    </div> -->
-
     </div>
   </section>
 
@@ -292,11 +242,6 @@
   <section class="projects-section bg-black">
     <div class="container">
 
-      <!-- <div class="row align-items-center no-gutters mb-4">
-          <div class="col-xl-12 col-lg-12">
-              <h6 class="text-white-50 text-center">NUTRITION</h6>
-          </div>
-      </div> -->
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5 project">
         <div class="col-xl-8 col-lg-7">
@@ -362,43 +307,6 @@
           </div>
       </div>
 
-      <!-- Project One Row -->
-      <!-- <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/connection.jpg" alt="">
-        </div>
-        <div class="col-lg-6">
-          <div class="text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">One</h4>
-                  <h5 class="mb-0 text-white">Homines enim eruditos et sobrios ut infaustos et inutiles vitant, eo quoque accedente quod et nomenclatores adsueti haec et talia venditare, mercede accepta lucris quosdam et prandiis inserunt subditicios ignobiles et obscuros.Homines enim eruditos et sobrios ut infaustos et inutiles vitant, eo quoque accedente quod.
-                  </h5>
-                <hr class="d-none d-lg-block mb-0 ml-0">
-              </div>
-            </div>
-          </div>
-        </div>
-    </div> -->
-
-      <!-- Project Two Row -->
-      <!-- <div class="row justify-content-center no-gutters">
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/inspire.jpg" alt="">
-        </div>
-        <div class="col-lg-6 order-lg-first">
-          <div class="text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Two</h4>
-                  <h5 class="mb-0 text-white">Homines enim eruditos et sobrios ut infaustos et inutiles vitant, eo quoque accedente quod et nomenclatores adsueti haec et talia venditare, mercede accepta lucris quosdam et prandiis inserunt subditicios ignobiles.</h5>
-                <hr class="d-none d-lg-block mb-0 mr-0">
-              </div>
-            </div>
-          </div>
-        </div>
-    </div> -->
-
     </div>
   </section>
 
@@ -406,11 +314,6 @@
   <section class="projects-section bg-black">
     <div class="container">
 
-      <!-- <div class="row align-items-center no-gutters mb-4">
-          <div class="col-xl-12 col-lg-12">
-              <h6 class="text-white-50 text-center">REST</h6>
-          </div>
-      </div> -->
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5 project">
         <div class="col-xl-8 col-lg-7">
@@ -430,15 +333,15 @@
             </h4>
             <h5 class="text-white mb-2">
                 <span lang="en">The benefits of relaxation are huge, they create synergy between body and mind, restructuring the individual.</span>
-                <span lang="fr">Les bienfaits de la relaxation dépassent l'imagination, ils permettent de créer l'harmonie entre le corps et l'esprit, et favorisent ainsi la restructuration de l'individu.</span>
+                <span lang="fr">Les énormes bienfaits de la relaxation permettent de créer l'harmonie entre le corps et l'esprit, et favorisent ainsi la restructuration de l'individu.</span>
             </h5>
             <h5 class="text-white mb-2">
                 <span lang="en">In a world where we are constantly subject to distractions, it is important to create time for us, to empty our minds, relief stress and find our well-being.</span>
-                <span lang="fr">Dans un monde où nous sommes constamment soumis à nos pensées, il est important de trouver du temps pour soi, pour se vider l'esprit et retrouver une sensation globale de bien être.</span>
+                <span lang="fr">Dans un monde où nous sommes constamment soumis à nos pensées, le temps pour soi est absolument important, pour se vider l'esprit et retrouver son bien être.</span>
             </h5>
             <h5 class="text-white mb-0">
                 <span lang="en">Relaxation can improve a multitude of areas: emotional, intellectual, corporeal, functional...</span>
-                <span lang="fr">Les bienfaits de la relaxation se retrouvent dans différents domaines : émotionnel, intellectuel, corporel ou même fonctionnel...</span>
+                <span lang="fr">La relaxation améliore différents domaines : émotionnel, intellectuel, corporel, fonctionnel...</span>
             </h5>
           </div>
         </div>
@@ -469,43 +372,6 @@
           </div>
       </div>
 
-      <!-- Project One Row -->
-      <!-- <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/connection.jpg" alt="">
-        </div>
-        <div class="col-lg-6">
-          <div class="text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">One</h4>
-                  <h5 class="mb-0 text-white">Homines enim eruditos et sobrios ut infaustos et inutiles vitant, eo quoque accedente quod et nomenclatores adsueti haec et talia venditare, mercede accepta lucris quosdam et prandiis inserunt subditicios ignobiles et obscuros.Homines enim eruditos et sobrios ut infaustos et inutiles vitant, eo quoque accedente quod.
-                  </h5>
-                <hr class="d-none d-lg-block mb-0 ml-0">
-              </div>
-            </div>
-          </div>
-        </div>
-    </div> -->
-
-      <!-- Project Two Row -->
-      <!-- <div class="row justify-content-center no-gutters">
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/inspire.jpg" alt="">
-        </div>
-        <div class="col-lg-6 order-lg-first">
-          <div class="text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Two</h4>
-                  <h5 class="mb-0 text-white">Homines enim eruditos et sobrios ut infaustos et inutiles vitant, eo quoque accedente quod et nomenclatores adsueti haec et talia venditare, mercede accepta lucris quosdam et prandiis inserunt subditicios ignobiles.</h5>
-                <hr class="d-none d-lg-block mb-0 mr-0">
-              </div>
-            </div>
-          </div>
-        </div>
-    </div -->
-
     </div>
   </section>
 
@@ -515,27 +381,16 @@
 
       <div class="row">
 
-        <!-- <div class="col-md-4 mb-3 mb-md-0">
-          <a href="mailto:hi@iaco.me">
-            <div class="card py-4 h-100">
-              <div class="card-body text-center">
-                <i class="far fa-envelope fa-2x text-white mb-2"></i>
-                <h5 class="text-white m-0">Send me a letter</h5>
-                <hr class="my-4">
-                <div class="text-white">hi@iaco.me</div>
-              </div>
-            </div>
-          </a>
-        </div>  -->
-
         <div class="col-md-6 mb-9 mb-md-0">
           <a target="_blank" href="http://instagram.com/thomas_tournu">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
-                <i class="far fa-user fa-2x text-white mb-2"></i>
-                <h5 class="text-white m-0">The guy striving for mind and body synergy</h5>
-                <hr class="my-4">
+                <div class="author-photo">
+                  <img src="img/bg-about.jpg">
+                </div>
                 <div class="text-white">THOMΛS TOURNU</div>
+                <hr class="my-4">
+                <h5 class="text-white m-0">I strive for finding the mind & body synergy</h5>
               </div>
             </div>
           </a>
@@ -545,10 +400,12 @@
           <a target="_blank" href="https://iaco.me/hi">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
-                <i class="fas fa-user fa-2x text-white mb-2"></i>
-                <h5 class="text-white m-0">The guy passionate about life and #tgc</h5>
-                <hr class="my-4">
+                <div class="author-photo">
+                  <img src="img/iaco.jpg">
+                </div>
                 <div class="text-white">IΛCO VIVΛCI</div>
+                <hr class="my-4">
+                <h5 class="text-white m-0">I thrive on taking good care #tgc of life</h5>
               </div>
             </div>
           </a>
