--- a/index.html
+++ b/index.html
@@ -369,6 +369,13 @@
                       <span lang="fr"> La respiration - bientôt</span>
                   </a>
               </h6>
+              <h6 class="text-center mb-3">
+                  <a href="https://youtu.be/Ltgh5lB3u60" target="_blank" class="js-scroll-trigger">
+                      <i class="fab fa-youtube fa-lg"></i>
+                      <span lang="en"> Cardiac Coherence - video</span>
+                      <span lang="fr"> Cohérence Cardiaque - vidéo</span>
+                  </a>
+              </h6>
           </div>
       </div>
 
